# picodexed

./: CMakeLists.txt  LICENSE  README.md  getsubmod.sh  getvoices.sh
cmsis/: README.md
libs/: encoder.cpp  encoder.h  font.h  pio_rotary_encoder.pio  ssd1306.c  ssd1306.h
src/: config-ER.h  config.h  dexedadaptor.h  display.cpp  display.h  main.cpp  mididevice.cpp  mididevice.h  pico_audio.hpp  pico_perf.cpp  pico_perf.h  picodexed.cpp  picodexed.h  serialmidi.cpp  serialmidi.h  sounddevice.cpp  sounddevice.h  tusb_config.h  usb_descriptors.c  usbmidi.cpp  usbmidi.h  usbtask.c  usbtask.h
synth_dexed/: CMakeLists.txt  README.md  arm_math.c  arm_math.h  compressor.h.diff  dexed.cpp.diff  dexed.diff  dexed.h.diff  dexed_if_common.h  extra_maths.c  extra_maths.h
